fix: weird breakpoints and flex-wrap improvement

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,48 +11,19 @@ body {
     color: #fff;
 
     #root {
-        width: 100%;
-        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
 
-        @media(max-width: 999px) {
-            height: auto;
-            margin-top: 50px;
-        }
+        width: 100%;
 
         .row {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
+
             width: 100%;
-
-            @media(max-width: 999px) {
-                flex-direction: column;
-            }
-
-            .col-1 {
-                display: flex;
-                justify-content: center;
-                width: 100%;
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-
-                margin-bottom: 50px;
-            }
-
-            .col-2 {
-                display: flex;
-                justify-content: center;
-                width: 50%;
-                flex-direction: column;
-                align-items: center;
-
-                @media(max-width: 999px) {
-                    width: 100%;
-                }
-            }
+            margin-top: 50px;
         }
 
         h1 {
